# ticket-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pom.xml  ry.bat  start.bat  stop.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ai-service/: README.md  pyproject.toml
ai-service/scripts/: smoke_similar_search.py  smoke_ticket_assist.py
ai-service/src/ticket_ai/: __init__.py  api.py  assist.py  config.py  dependencies.py  health.py  history_sync.py  knowledge.py  main.py  models.py  resilience.py  sanitization.py  security.py  similar_search.py  trace.py  triage.py
ai-service/src/ticket_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-service/tests/: test_assist.py  test_combined_search.py  test_contract.py  test_history_sync.py  test_knowledge.py  test_similar_search.py  test_stage48_safety.py  test_stage53_evaluation.py  test_sync_contract.py  test_triage.py
ai-service/tests/fixtures/: evaluation_cases.json
docs/: 01-project-spec.md  02-architecture-design.md  03-database-design.md  04-implementation-plan.md  05-test-release.md  README.md
docs/1.x/: 01-project-spec.md  02-architecture-design.md  03-database-design.md  04-implementation-plan.md  05-test-release.md
docs/2.x/: 01-project-spec.md  02-architecture-design.md  (+3 more)
ruoyi-admin/: pom.xml
ruoyi-common/: pom.xml
ruoyi-ticket/: pom.xml
sql/: README.md  ticket-v1.0.sql  ticket-v1.1.sql  ticket-v1.2.sql  ticket-v2.0.sql  ticket-v2.1.sql  ticket-v2.2.sql  ticket-v2.3.sql  ticket-v3.0.sql  ticket-v3.1.sql  ticket-v3.2.sql  ticket-v4.0.sql
(+487 files in other folders)
