[project]
name = "ticket-ai-service"
version = "0.1.0"
description = "FastAPI and LangChain service for ticket knowledge assistance"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.139.0",
    "langchain==1.3.11",
    "langchain-text-splitters==1.1.2",
    "langchain-openai==1.3.3",
    "elasticsearch==8.18.1",
    "pydantic-settings==2.14.2",
    "python-dotenv>=1.0,<2",
    "pypdf==6.14.2",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
